--- a/gb/21/9/4/n13210856.md
+++ b/gb/21/9/4/n13210856.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tdqfzt3033/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tdqfzt3033/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tdqfzt3033/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tdqfzt3033/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tdqfzt3033/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>韩国大选临近 一民调机构涉嫌造假被罚款</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13210857-ec12f864d848114984a17b17c6cb81d5.jpeg" />
 <h6>韩国明年3月即将大选，近日，一家民调机构因涉嫌大选民调造假而受到罚款处分。图为示意图。（fotolia）
 </h6>
 <hr>
-	<p>【大纪元2021年09月07日讯】（大纪元记者吴欢心报导）<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E9%9F%A9%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">韩国大选</a>将在明年3月举行。近日，一家<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E6%B0%91%E8%B0%83%E6%9C%BA%E6%9E%84.md#1">民调机构</a>因涉嫌<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E5%A4%A7%E9%80%89%E6%B0%91%E8%B0%83%E9%80%A0%E5%81%87.md#1">大选民调造假</a>而受到罚款处分。<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E6%B0%91%E8%B0%83%E6%9C%BA%E6%9E%84.md#1">民调机构</a>调查的可信度再次成为民众关注的话题。</p>
+	<p>【大纪元2021年09月07日讯】（大纪元记者吴欢心报导）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9F%A9%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">韩国大选</a>将在明年3月举行。近日，一家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B0%91%E8%B0%83%E6%9C%BA%E6%9E%84.md#1">民调机构</a>因涉嫌<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%A7%E9%80%89%E6%B0%91%E8%B0%83%E9%80%A0%E5%81%87.md#1">大选民调造假</a>而受到罚款处分。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B0%91%E8%B0%83%E6%9C%BA%E6%9E%84.md#1">民调机构</a>调查的可信度再次成为民众关注的话题。</p>
 <p>在韩国，民调十分重要，因为民调不仅影响舆论，还会对各党派推荐自己大选候选人的决定产生影响。因为韩国政党在推荐候选人时，普遍把民调支持率作为核心指标，一旦民调结果被扭曲，就会选出不符合党意和民意的人物。</p>
 <p>9月1日， 韩国中央选举舆论审查委员会（简称舆审委）表示，对民调公司Global Research（全球调查）今年7月4日公布的“第20届总统选举政党支持率”民调进行审查时发现，该公司在民调中，出现了有可能歪曲调查结果的诱导提问，以及记录与实际应答不同的内容。</p>
-<p>在调查过程中，当受访者对“支持的候选人是谁”的提问犹豫不决时，该公司的一些咨询员以询问“李在明？”或“会是尹锡悦吧？”的方式诱导提问。李在明和尹锡悦分别是本次<ahref="https://github.com/tdqfzt3033/djy/blob/master/gb/tag/%E9%9F%A9%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">韩国大选</a>的执政与在野党支持率最高的候选人。</p>
+<p>在调查过程中，当受访者对“支持的候选人是谁”的提问犹豫不决时，该公司的一些咨询员以询问“李在明？”或“会是尹锡悦吧？”的方式诱导提问。李在明和尹锡悦分别是本次<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9F%A9%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">韩国大选</a>的执政与在野党支持率最高的候选人。</p>
 <p>在受访者回答“没有支持的政党”时，出现咨询员会反问“是支持共同（民主党）吗？”共同民主党是韩国的执政党。</p>
 <p>另外，还出现受访者回答自己是“30多岁”，却被记录成20多岁或40多岁的事例。</p>
 <p>舆审委之所以对Global Research进行这次调查，是因为发现该公司的随机拨打电话（RDD）空号率明显偏低，感到很奇怪。因为如果随机拨打电话，往往会发现一定比例以上的空号。舆审委在通过确认通话录音，调查空号率的过程中，发现相关调查并非采用随机拨打电话方式，而实际上是咨询员利用已有的通信公司的电话号码数据库（DB）拨打的电话。</p>
@@ -31,41 +31,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/21/6/29/n13054318.md#1">韩国大选七月开跑 形势对亲共的文在寅不利</a></li>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/21/7/17/n13095931.md#1">中共驻韩大使批总统候选人 被指干涉韩国大选</a></li>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/21/7/24/n13111665.md#1">中共大使干涉韩国大选 韩媒批战狼外交狂妄</a></li>
-<li><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/21/7/29/n13125178.md#1">韩朝重启联络 引发对朝鲜影响韩国大选的担忧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/29/n13054318.md#1">韩国大选七月开跑 形势对亲共的文在寅不利</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/17/n13095931.md#1">中共驻韩大使批总统候选人 被指干涉韩国大选</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/24/n13111665.md#1">中共大使干涉韩国大选 韩媒批战狼外交狂妄</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/29/n13125178.md#1">韩朝重启联络 引发对朝鲜影响韩国大选的担忧</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/23/n10802534.md#1" target="_blank">韩丽明：游街</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487343.md#1" target="_blank">抗日战争期间中共做了啥？ 由图表告诉你！(一)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/11/n11377666.md#1" target="_blank">平凡人不凡的修炼经历</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/8/27/n13191066.md#1">古人最常用的化妆品是什么？</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/8/28/n13194661.md#1">【未解之谜】不可思议的撞脸 是转世还是巧合？</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/8/29/n13196066.md#1">告别进化论</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/4/n13210934.md#1">【财商天下】北京调控过猛 楼市有大危机</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13208120.md#1">【珍言真语】周小龙：议员未尽职 艺术中心受打压</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/5/n13211828.md#1">【马克时空】中共威胁台湾 日本获美松绑 将成为军事强国</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13207021.md#1">赵薇“幕后总指挥”曝光？</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13206414.md#1">北大经济学教授罕见警告：走向“共同贫穷”</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13209059.md#1">赵薇遭封杀 林心如一动作获赞“有先见之明”</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13208868.md#1">为何近年只当厨师不拍电影？谢霆锋感伤回应</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13209273.md#1">工作室微博被禁言至今 赵丽颖9月行程成谜</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13206073.md#1">黄秋生庆60岁生日 杜汶泽祝“好人一生平安”</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/3/n13208358.md#1">空气炸锅做的这些蔬菜 好吃得停不下来</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/4/n13210581.md#1">以色列成疫情惨重国 疫苗防疫有6大问题</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/1/n13201822.md#1">远离失智、忧郁症！研究揭最佳睡眠时间</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/4/n13210320.md#1">一个常见烹饪错误 让你胆固醇升高</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/9/2/n13205789.md#1">生活中处处藏毒素 黑豆、绿豆加1物解百毒</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tdqfzt3033/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tdqfzt3033/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/4/n13210856.htm">韩国大选临近 一民调机构涉嫌造假被罚款</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/4/n13210856.htm">韩国大选临近 一民调机构涉嫌造假被罚款</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tdqfzt3033/djy/blob/master/gb/21/9/4/n13210856.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tdqfzt3033/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tdqfzt3033/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tdqfzt3033/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tdqfzt3033/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/9/4/n13210856.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
